--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=8080
 MONGODB_CNN=mongodb+srv://user_node_cafe:Q5Rh_tFQj3JaQ5H@miclustercafe.embq8rs.mongodb.net/cafedb
+SECRETORPRIVATEKEY=Estesmipublickey12345
